# CompileProject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  grammar.txt  nonTerminalList.txt  problem.md
lib/: encrypt.c  encrypt.ll
src/: #code_gen.cpp#  #main.ll#  .#code_gen.cpp  .gdb_history  CMakeCache.txt  CMakeLists.txt  Makefile  ast.cpp  ast.h  cmake_install.cmake  code_gen.cpp  code_gen.h  compile_and_run.sh  define.cpp  define.l  grammar.cpp  grammar.hpp  grammar.y  main  main.cpp  main.ll  test.c  test.txt  yaccTest
src/DeadBlock/: CMakeLists.txt  Makefile  cmake_install.cmake  deadblock.cpp
src/Obfuscate/: CMakeLists.txt  Makefile  cmake_install.cmake  obfuscate.cpp
src/visualize/: ast.json  drawAST.js  visualization.html
test/: run.sh
test/CourseAssistant/: courseAssistant  courseAssistant.c  input.txt  main  main.s
test/MatrixMultiple/: matrixMul  matrixMul.c  test.txt
test/QuickSort/: main  main.s  quickSort  quickSort.c
test/advisor/: input.txt  main-obfuscate-linked  main-obfuscate-linked.bc  main-obfuscate.bc  main-obfuscate.ll  main-obfuscate.s  main-optimized-branch  main-optimized-branch.bc  main-optimized-branch.ll  main-optimized-branch.s  main.bc  main.c  main.ll
test/fuse/: main  main-obfuscate-linked  main-obfuscate-linked.bc  main-obfuscate.bc  main-obfuscate.ll  main-obfuscate.s  main-optimized-branch.ll  main.bc  main.c  main.ll  main.s
test/ld/: main  main-obfuscate-linked  main-obfuscate-linked.bc  main-obfuscate.bc  main-obfuscate.ll  main-obfuscate.s  main.c  (+2 more)
(+48 files in other folders)
