ADD_COMPILE_OPTIONS(-g)
FIND_PACKAGE(BISON)
FIND_PACKAGE(FLEX)
BISON_TARGET(Parser grammar.y ${CMAKE_CURRENT_BINARY_DIR}/grammar.cpp DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/grammar.hpp)
FLEX_TARGET(Scanner define.l ${CMAKE_CURRENT_BINARY_DIR}/define.cpp)
ADD_FLEX_BISON_DEPENDENCY(Scanner Parser)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp ${BISON_Parser_OUTPUTS} ast.cpp code_gen.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FLEX_LIBRARIES} -ljsoncpp)

FIND_PACKAGE(LLVM)
INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})
LINK_DIRECTORIES(${LLVM_LIBRARY_DIRS})
LLVM_MAP_COMPONENTS_TO_LIBNAMES(REQ_LLVM_LIBRARIES core)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${REQ_LLVM_LIBRARIES})

add_subdirectory(DeadBlock)
add_subdirectory(Obfuscate)

